--- a/0808.2178/BvJ.tex
+++ b/0808.2178/BvJ.tex
@@ -1,15 +1,53 @@
-
-
-
-
-\documentclass[aps,prc,twocolumn]{revtex4}
+\documentclass[12pt]{article}
 \usepackage{graphicx,amssymb}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \begin{document}
 
 \title{Local Causality and Completeness:  Bell \emph{vs.} Jarrett}
 \author{Travis Norsen}
-\affiliation{Marlboro College \\ Marlboro, VT  05344 \\ norsen@marlboro.edu}
 
 \date{August 14, 2008}
 
@@ -45,7 +83,7 @@ the implications of his own theorem.
 In 1964, J.S. Bell proved the result now known as Bell's
 Theorem:  any physical theory of a certain
 type must make predictions (for a certain class of experiment) which
-respect a so-called Bell Inequality.  
+respect a so-called Bell Inequality.%
 \footnote{John S. Bell, \emph{Speakable and Unspeakable in Quantum
     Mechanics}, 2nd ed., Cambridge University Press, 2004.  Subsequent
   references to Bell's writings in the text will be given in-line with
@@ -56,7 +94,7 @@ experiments establish convincingly (though not without loopholes) that
 the Quantum Mechanical predictions are correct -- i.e., the
 experiments establish that 
 the type of theory Bell showed must respect the Inequality, cannot be
-empirically viable, i.e., cannot be true.  
+empirically viable, i.e., cannot be true.%
 \footnote{For a review of recent experiments and associated loopholes,
   see, e.g., Abner Shimony, ``Bell's Theorem'', \emph{The Stanford
   Encyclopedia of Philosophy} (Fall 2006 Edition), Edward N. Zalta
@@ -101,7 +139,7 @@ interchangeably.)  The idea is then that, since it is only the
 with experiment, and since locality is so strongly motivated by SR, we
 should reject the other premise.  Hence the widespread reports that
 Bell's theorem finally refutes the hidden variables program, the
-principle of determinism, the philosophical notion of realism, etc.
+principle of determinism, the philosophical notion of realism, etc.%
 \footnote{See, for example:  N. David Mermin, ``What is quantum
   mechanics trying to tell us?'' \emph{AmJPhys}, {\bf{66}}(9),
   September 1998, pg 753-767; Marek Zukowski, ``On the paradoxical
@@ -135,7 +173,7 @@ singlet state) \emph{to} the existence of deterministic local hidden
 variables; and then second, from such variables to the inequality,
 i.e., to a disagreement with certain other predictions of QM.  This
 whole first class of disagreement with Bell, then, rests on a simple
-confusion about Bell's argument. 
+confusion about Bell's argument.%
 \footnote{For further discussion, see any of Bell's papers and, e.g.:
   Tim Maudlin, \emph{Quantum Non-Locality and Relativity} (Second
   Edition), Blackwell, Malden, Massachusetts, 2002;  Travis Norsen,
@@ -150,7 +188,7 @@ who argue that this locality condition is \emph{too strong}, i.e.,
 that it smuggles in some extra requirements beyond those
 minimally necessary to respect SR's prohibition on superluminal
 causation.  At the head of this class is Jon Jarrett, whose 1983 
-PhD thesis and subsequent 1984 paper 
+PhD thesis and subsequent 1984 paper% 
 \footnote{Jon Jarrett, ``On the Physical Significance of the Locality
   Conditions in the Bell Arguments,'' \emph{Nous} {\bf{18}} (1984) 569-589}
 argued that Bell's own local causality condition (which Jarrett calls 
@@ -174,7 +212,7 @@ by SR.  By contrast, a violation of ``completeness'' indicates no
 conflict with SR.  Thus, Jarrett
 argues, in the face of the empirical data conflicting with ``strong
 locality'' we may reject ``completeness'' and thereby achieve -- contra
-Bell -- a kind of Peaceful Coexistence between QM and SR.  
+Bell -- a kind of Peaceful Coexistence between QM and SR.% 
 \footnote{``Peaceful Coexistence'' is Abner Shimony's term:  
   ``Metaphysical problems in the foundations of quantum mechanics,''
   \emph{International Philosophical Quarterly} 18, 3-17.}
@@ -182,7 +220,7 @@ Bell -- a kind of Peaceful Coexistence between QM and SR.
 Jarrett's project has been widely hailed and widely discussed.  It was
 the immediate stimulus for almost everything in the ``Bell
 literature'' for about a decade after its appearance, and continues to
-set a broadly influential context for much ongoing work in this area.
+set a broadly influential context for much ongoing work in this area.%
 \footnote{See, for example, M.L.G. Redhead, \emph{Incompleteness,
     Nonlocality, and Realism: A Prolegomenon to the Philosophy of
     Quantum Mechanics} Oxford, 1987; J. Cushing and E. McMullin, eds.,
@@ -219,14 +257,14 @@ brief final section then summarizes and concludes.
 Before launching into this, however, it is appropriate to briefly
 survey earlier criticisms of Jarrett's analysis of Bell's locality
 concept.  To my knowledge, the fullest critical discussion of
-Jarrett's project is in Maudlin's book. \footnote{\emph{Op cit., 
+Jarrett's project is in Maudlin's book.\footnote{\emph{Op cit., 
 pp. 93-98}}  
 Maudlin's main points \emph{vis-a-vis} Jarrett are as follows:  
 (a) Jarrett's identification of his ``locality'' sub-condition with
 the prohibition on superluminal signals is wrong; (b) Jarrett's
 identification of superluminal signaling with superluminal causation
 is wrong; (c) Jarrett's claim that a violation of his ``completeness''
-condition does not entail any nonlocal causation is wrong.
+condition does not entail any nonlocal causation is wrong.%
 \footnote{Similar points are made in Jeremy Butterfield, ``Bell's
   Theorem: What it Takes'' \emph{Brit. J. Phil. Sci.}, {\bf{43}}
   (1992) 41-83.  Butterfield, however, (unlike Maudlin) ends up
@@ -431,7 +469,7 @@ But since there is, by definition, no such omission in the \emph{complete}
 specification $B_3$, this eventuality cannot arise, and a violation of
 Equation \ref{eq:loc} \emph{must} indicate the existence of some
 nonlocal causation, i.e., causal influences not respecting Bell's
-original ``Principle of local causality'' (as displayed in Figure 1).  
+original ``Principle of local causality'' (as displayed in Figure 1).%  
 \footnote{Note that Bell stresses the need for a \emph{complete}
 specification of beables in the relevant space-time region already
 in his 1975 paper \emph{The theory of local beables}:  
@@ -469,7 +507,7 @@ cone of 2 -- and vice versa.  What is ensured by a violation of Equation
 causality (as sketched in Figure 1) is being posited somewhere by the
 theory in question.  Whether something in 2 is exerting a causal
 influence on 1 (or vice versa, or neither) the mere violation of
-Equation \ref{eq:loc} doesn't permit us to say.  
+Equation \ref{eq:loc} doesn't permit us to say.%  
 \footnote{This is why, despite being an improvement over Jarrett's
   terminology for the two sub-conditions to be discussed in Section
   III, Abner Shimony's terminology (``parameter independence'' for
@@ -516,7 +554,7 @@ And the same goes for the probabilities in Equation
 of.  These should be read not as empirical frequencies or subjective
 measures of expectation, but as the fundamental dynamical
 probabilities described by the candidate theory in question (which we
-assume, without loss of generality, to be irreducibly stochastic).
+assume, without loss of generality, to be irreducibly stochastic).%
 \footnote{Determinism is simply a special case in which all
   probabilities are either zero or unity.}
 
@@ -560,7 +598,7 @@ locally causal theory in Bell's sense
 can agree with experiment, can be empirically viable, can be
 true.  Which means the true theory (whatever it might be) necessarily
 \emph{violates} Bell's locality condition.  Nature is not locally
-causal.  
+causal.%
 \footnote{This sometimes comes as a shock to adherents of orthodox
 quantum theory, who are used to thinking of their own theory --
 especially in its allegedly relativistic variants -- as perfectly
@@ -637,7 +675,7 @@ orientation of a Stern-Gerlach device, or some sort of knob or lever
 on some more black-box-ish device.  Thus, this ``setting'' ultimately
 comes down to the spatial configuration of some physically real
 matter, i.e., it must be reflected somehow in the beables posited by
-any serious candidate theory. 
+any serious candidate theory.% 
 \footnote{A candidate theory which posited no
 beables corresponding to such things as knobs and levers should not,
 and probably could not, be taken seriously.  Bell stresses in his very
@@ -746,7 +784,7 @@ particle pair exerted some causal influence on the settings (or vice
 versa!) or if the particle pair and the settings were mutually causally
 influenced in some non-trivial way by events farther back in the past
 -- then the above expression for the empirical frequency would be
-invalid and the derivation of the Bell inequality wouldn't go through.
+invalid and the derivation of the Bell inequality wouldn't go through.%
 \footnote{See Bell, 1990, pp. 243-4.}
 
 This might seem like cause for concern, especially considering that
@@ -774,7 +812,7 @@ fly into the detection region just prior to the measurement) which
 actually exists in the relevant spacetime region.  Such a fact could
 then be allowed to determine the setting $\hat{a}$ without introducing
 even the slightest evidence for the problematic sort of correlation
-between $\hat{a}$ and $\lambda$.  
+between $\hat{a}$ and $\lambda$.%  
 \footnote{See Bell's discussion in his 1977, pages 100-104.}
 Indeed, this is just an exaggerated
 version of what happens in the actual experiments, where
@@ -794,7 +832,7 @@ abandoned in advance the whole enterprise of discovering the laws of
 nature by experimentation.   [Hence, the extra] supposition needed [to
 derive Bell's inequality from Bell's locality condition] is
 no stronger than one needs for experimental reasoning generically, and
-nevertheless just strong enough to yield the desired inequality.''  
+nevertheless just strong enough to yield the desired inequality.''%  
 \footnote{A. Shimony, M.A. Horne, and J.F. Clauser, ``An Exchange on
   Local Beables,'' \emph{Dialectica}, 39 (1985) 86-110}
 \end{quote}
@@ -1423,13 +1461,13 @@ There is, in particular, a tendency for a relatively
 superficial focus on the relatively formal aspects of Bell's
 arguments, to lead commentators astray.  For example, how many
 commentators have too-quickly breezed through the prosaic first
-section of Bell's 1964 paper (p. 14-21) -- where his reliance on the EPR
+section of Bell's 1964 paper (p.~14-21) -- where his reliance on the EPR
 argument ``\emph{from locality to} deterministic hidden variables''
 is made clear -- and simply jumped ahead to section 2's 
-Equation 1 (p. 15), hence erroneously inferring (and subsequently
+Equation 1 (p.15), hence erroneously inferring (and subsequently
 reporting to other physicists and ultimately teaching to students) 
 that the derivation ``begins with deterministic hidden variables''?  
-(1981, p. 157)  Likewise, we have here explored in detail 
+(1981, p.157)  Likewise, we have here explored in detail 
 a similar case of too-quickly accepting some formal version of a
 premise used in Bell's derivation (such as ``factorizability'') 
 while failing to appreciate the rich conceptual context that gives it
