--- a/0911.2201/artzeno.tex
+++ b/0911.2201/artzeno.tex
@@ -51,6 +51,10 @@ bookmarksopenlevel=10
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \sloppy
+\raggedbottom
+\pagestyle{plain}
+
+%\usepackage{eulervm}
 
 %\draft % marks overfull lines with a black rule on the right
 \newcommand{\tr}{\mathop{\mathrm{tr}}\nolimits}
