--- a/1310.4319/AdS_CFT_red.tex
+++ b/1310.4319/AdS_CFT_red.tex
@@ -28,7 +28,7 @@ bookmarksopenlevel=10
 \usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
 \usepackage[small]{titlesec}
@@ -36,7 +36,8 @@ bookmarksopenlevel=10
 \titlelabel{{\thetitle}.\quad}
 
 % different \sum and also fixes underbraces
-\input{../helpers/mnsymbol.tex}
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
 
 % optional
 
