--- a/2007.00619/PFMES_-_arxiv_v2.tex
+++ b/2007.00619/PFMES_-_arxiv_v2.tex
@@ -16,7 +16,7 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
