--- a/2202.09425v3/The_Fundamentality_of_Fields_-_arXiv_v3.tex
+++ b/2202.09425v3/The_Fundamentality_of_Fields_-_arXiv_v3.tex
@@ -1,5 +1,5 @@
 
-\documentclass[onecolumn,secnumarabic,amsmath,amssymb,balancelastpage,nofootinbib]{article}
+\documentclass[onecolumn,secnumarabic,amsmath,amssymb,balancelastpage,nofootinbib,12pt]{article}
 
 \usepackage[e]{esvect}
 \usepackage{color}         % produces boxes or entire pages with colored backgrounds
@@ -23,30 +23,57 @@
 
 \usepackage[none]{hyphenat} % removes hyphenation
 
-\usepackage[colorlinks=true]{hyperref}  % this package should be added after all others
 
 \setlength{\bibsep}{0 pt} %condense bibliography spacing
 \setstretch{1.3}
 \setlength{\skip\footins}{.75cm}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
-\addtolength{\oddsidemargin}{-.25in}
-\addtolength{\evensidemargin}{-.25in}
-\addtolength{\textwidth}{.5in}
-\addtolength{\topmargin}{-.75in}
-\addtolength{\textheight}{1.25in}
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 	
 %\linespread{1.6}
 %\setlength{\skip\footins}{.75cm}
-
-\definecolor{darkred}{rgb}{0.6,0,0}
-\definecolor{darkgreen}{rgb}{0,0.5,0}
-\definecolor{darkblue}{rgb}{0,0,0.6}
-\hypersetup{ colorlinks,
-linkcolor=darkblue,
-filecolor=darkgreen,
-urlcolor=darkgreen,
-citecolor=darkred }
 
 \setlength{\tabcolsep}{12pt}
 \setlength{\bibsep}{3pt}
@@ -66,11 +93,11 @@ citecolor=darkred }
 
 
 \maketitle
-\vspace*{-20 pt}
 \begin{abstract}
 There is debate as to whether quantum field theory is, at bottom, a quantum theory of fields or particles.  One can take a field approach to the theory, using wave functionals over field configurations, or a particle approach, using wave functions over particle configurations.  This article argues for a field approach, presenting three advantages over a particle approach: (1) particle wave functions are not available for photons, (2) a classical field model of the electron gives a superior account of both spin and self-interaction as compared to a classical particle model, and (3) the space of field wave functionals appears to be larger than the space of particle wave functions.  The article also describes two important tasks facing proponents of a field approach: (1) legitimize or excise the use of Grassmann numbers for fermionic field values and in wave functional amplitudes, and (2) describe how quantum fields give rise to particle-like behavior.
 \end{abstract}
 
+\newpage
 
 \tableofcontents
 \newpage
