--- a/howard-1980/howard.tex
+++ b/howard-1980/howard.tex
@@ -1,20 +1,6 @@
 \documentclass[12pt]{article}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[colorlinks=true
-,breaklinks=true
-,urlcolor=blue
-,anchorcolor=blue
-,citecolor=blue
-,filecolor=blue
-,linkcolor=blue
-,menucolor=blue
-,linktocpage=true]{hyperref}
-\hypersetup{
-bookmarksopen=true,
-bookmarksnumbered=true,
-bookmarksopenlevel=10
-}
 \usepackage[noBBpl,sc]{mathpazo}
 %\usepackage[full]{textcomp}
 %\usepackage[osf]{XCharter}% lining figures in math, osf in text
@@ -33,12 +19,12 @@ bookmarksopenlevel=10
 % in the main file.
 \def\mm{\mathrel{||}\mathrel{\mkern-4.4mu}\relbar}
 
-\usepackage[papersize={6.8in, 9.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.8in, 9.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \linespread{1.1}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
-\usepackage[euler-digits]{eulervm}
+%\usepackage[euler-digits]{eulervm}
 \usepackage{enumitem}
 \usepackage{mathpartir}
 \usepackage{stmaryrd}
@@ -57,6 +43,22 @@ bookmarksopenlevel=10
 
 % make sure there is enough TOC for reasonable pdf bookmarks.
 \setcounter{tocdepth}{3}
+\setcounter{secnumdepth}{0}
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 
 \date{}
 \def\to{\rightarrow}
@@ -118,6 +120,7 @@ bookmarksopenlevel=10
 \newcommand*\bigcdot@[2]{\mathbin{\vcenter{\hbox{\scalebox{#2}{$\m@th#1\bullet$}}}}}
 \makeatother
 
+
 \title{The Formulae-as-types Notion of Construction}
 \author{W. H. Howard}
 \date{1980}
@@ -141,14 +144,14 @@ The ultimate goal was to develop a notion of construction suitable for the inter
 
 In Part I the ideas are illustrated for the intuitionistic propositional calculus and in Part II (page 7) they are applied to Heyting arithmetic.
 
-\section*{I. Intuitionistic propositional calculus}
+\section{I. Intuitionistic propositional calculus}
 
 H. Curry (1958) has observed that there is a close correspondence between axioms of positive implicational propositional logic, on the one hand, and basic combinators on the other hand. For example, the combinator $K = \l X.\,\l Y.\,X$ corresponds to the axiom $\a \limp (\b \limp \a)$.
 
 The following notion of construction, for positive implicational propositional logic, was motivated by Curry's observation. More precisely, Curry's observation provided half the motivation. The other half was provided by W. Tait's discovery of the close correspondence between cut elimination and reduction of $\l$-terms (W. W. Tait, 1965). It is convenient to use $\l$-terms rather than combinators. This corresponds to the sequent formulation of propositional logic.
 
 
-\subsection*{\it 1. Formulation of the sequent calculus}
+\subsection{\it 1. Formulation of the sequent calculus}
 
 Let $\PI$ denote positive implicational propositional logic. The prime formulae of $\PI$ are propositional variables. If $\a$ and $\b
 $ are formulae, so is $\a \limp \b$. A sequent has the form $\G \imp \b$\footnote{Editor's note: In most modern exposition on this subject one would use the notation $\vdash$ where this paper uses $\imp$ in these deduction rules. So don't get confused and think that those arrows mean implication and/or a function arrow.}, where $\G$ is a (possibly empty) finite sequence of formulae and $\b$ is a formula. The axioms and rules of inference of $\PI$ are as follows.
@@ -166,7 +169,7 @@ $ are formulae, so is $\a \limp \b$. A sequent has the form $\G \imp \b$\footnot
 \end{description}
 \end{quote}
 
-\subsection*{\it 2. Type symbols, terms and constructions}
+\subsection{\it 2. Type symbols, terms and constructions}
 
 By a type symbol is meant a formula of $\PI$. We will consider a $\l$-formalism in which each term has a type symbol $\a$ as a superscript (which we may not always write); the term is said to be of type $\a$. The rules of term formation are as follows.
 
@@ -187,7 +190,7 @@ same type $\a$ in $F^\b$ is reflected by at least $k$ occurrences of $\a$ in $\G
 a construction of $\a \imp \a$ (but $X^\a$ is also a construction of $\b, \a \imp \a)$. Another 
 example: $\l X^\a .\, \l Y^\b .\, X^\a$ is a construction of $\imp \a \limp (\b \limp \a)$.
 
-\subsection*{\it 3. Correspondence between derivation and terms}
+\subsection{\it 3. Correspondence between derivation and terms}
 
 Clearly the axioms and rules of inference (1.1)–(1.3) of $\PI$ correspond exactly to the rules 
 (2.1)–(2.3) of term formation. A construction of $\G \limp \b$ is clearly also a construction of $\G$, $\ab$
@@ -201,7 +204,7 @@ by one variable of type $\a$ in the corresponding construction. Hence:
 Given any derivation of $\G \imp \b$ in $\PI$ we can find a construction of $\G \imp \b$ and conversely.
 \end{theorem}
 
-\subsection*{\it 4. Interpretation of terms}
+\subsection{\it 4. Interpretation of terms}
 
 \def\fxg{[F^\a/X^\a]G^\b}
 
@@ -214,7 +217,7 @@ Of course a constructivist would be interested in other interpretations; for exa
 of terms (i.e., reduction to irreducible form). It is easy to prove that the terms given above can he reduced to normal 
 (i.e., irreducible) form by $\l$-contractions. The relation between this and cut elimination will now be discussed briefly.
 
-\subsection*{\it 5. Normalization of terms and cut elimination}
+\subsection{\it 5. Normalization of terms and cut elimination}
 
 Clearly the cut rule for $\PI$ corresponds to the following rule of term formation: from $F^\a$ and $G^\b$ get $\fxg$ (the result of substituting $F^\a$ for the free variable $X^\a$ in $G^\b$, where no free variable in $F^\a$ becomes hound in $\fxg$. Though we did not include substitution in our rules of term formation, the rule (2.3) (application) is just about as bad --- from the viewpoint of obtaining irreducible terms. Professor Curry is fond of pointing out how to get irreducible terms: simply replace the rule (2.3) by:
 \begin{align*}
@@ -243,7 +246,7 @@ Cut {\it elimination} can be taken to mean: the transformation of a proof of $\g
 \def\fimpa{f \limp a}
 \def\contr{\mathop{\sf contr}}
 
-\subsection*{\it 6. Addition of $\lnot$, $\land$ and $\lor$ to $\PI$}
+\subsection{\it 6. Addition of $\lnot$, $\land$ and $\lor$ to $\PI$}
 
 Corresponding to each of these connectives we add certain closed prime terms to our supply of terms.
 
@@ -291,11 +294,11 @@ for all terms $M$,$N$,$F$,$G$ of types $\a$, $\b$, $a \limp \b$ and $\b \limp \g
 Every closed irreducible term of type $\a \lor \b$ has the form $C_1F^\a$ or $C_2 G^\b$, where $C_1$ and $C_2$ are as above.
 \end{theorem}
 
-\section*{II. Heyting Arithmetic}
+\section{II. Heyting Arithmetic}
 
 We will be concerned mainly with the subsystem $H(\limp, \lor, \forall)$ of Heyting arithmetic obtained by omitting $\lor$ and $\exists$. As is well-known, $\lnot\a$ can be defined as $\a \limp 0 = 1$ In section 12 we will make some remarks about the question of including $\exists$. Of course $\lor$ can be defined by use of $\exists$. The variables belonging to $H(\limp, \lor, \forall)$ will be called {\it number variables}.
 
-\subsection*{\it 7. Constructions}
+\subsection{\it 7. Constructions}
 
 Our constructions will be terms built up from prime terms by means of rules of term formation as indicated in (i)–(iv), below. Every term is supplied with a unique type symbol. The numerical terms — namely, the terms belonging to $\HIMP$ --— have type $0$.
 
@@ -326,7 +329,7 @@ Our constructions will be terms built up from prime terms by means of rules of t
 
 \end{enumerate}
 
-\subsection*{\it 8. Special terms}
+\subsection{\it 8. Special terms}
 
 \begin{enumerate}[label=(\roman*)]
 \item Terms of types $x+0=x$ and $x+(y+1)=(x+y)+1$,
@@ -341,7 +344,7 @@ $$
 also a term $R^{\b(n)}$ for each numeral $n$.
 \end{enumerate}
 
-\subsection*{\it 9. Constructions and derivations in $\HIMP$}
+\subsection{\it 9. Constructions and derivations in $\HIMP$}
 
 Define constructions as in section 2. As in the case of $\PI$ —-- see section 3 —-- the axioms of $\HIMP$ correspond to the existence of
 certain terms, and the rules of inference correspond to rules of term formation. In particular $\forall x \a(x) \imp \a(t)$ has the
@@ -352,7 +355,7 @@ $\G, \, \forall x \a (x) \imp \b$. Thus, we obtain:
 Given any derivation of $\gimpb$ in $\HIMP$ we can find a construction of $\gimpb$ and conversely.
 \end{theorem}
 
-\subsection*{\it 10. Interpretation of terms of $\HIMP$}
+\subsection{\it 10. Interpretation of terms of $\HIMP$}
 
 We extend the discussion of section 4 as follows.
 
@@ -392,7 +395,7 @@ on $n$. If $F$ is $R^{\forall y \, \b(y)}$, then $F$ is the mapping which takes 
 
 \end{enumerate}
 
-\subsection*{\it 11. Normalization of terms}
+\subsection{\it 11. Normalization of terms}
 
 \leqnos
 
@@ -435,7 +438,7 @@ Every term can be reduced to irreducible form.
 
 Theorem 3 of section 6 extends to the present terms. By use of Theorem 3 it is easy to show that there is no irreducible construction of a sequent of the form $\imp m = n$ with $m \neq n$. Thus by finitistic reasoning it can be proved that Theorem 6 implies the consistency of $\HIMP$.
 
-\subsection*{12. Introduction of $\exists$}
+\subsection{12. Introduction of $\exists$}
 
 How are we to handle the existential quantifier in our theory of constructions? This appears to be a nontrivial question. The following two alternatives suggest themselves.
 
@@ -471,7 +474,7 @@ In general a type symbol of the form $\forall X^ \a\b$ arises by abstraction fro
 It might be of interest to know the answer to the following question. Let $G$ be a closed term obtained by extending our supply of constructions in the manner just described. Suppose $G$ has type $\a$ where $\a$ is a formula of $\HIMPE$. Must there be a derivation of $\imp \a$ in $\HIMPE$?
 
 
-\subsection*{\it 13. Infinite constructions}
+\subsection{\it 13. Infinite constructions}
 
 As is well-known, we do not have cut elimination for $\HIMP$ unless the axiom of mathematical induction is replaced by an $\omega$-rule.
 There is no difficulty in developing a theory of constructions for the $\omega$-rule version of $\HIMP$. 
@@ -481,7 +484,7 @@ In fact, if one uses Tait's notion of infinite terms (Tait, 1967), one gets a ve
 
 \renewcommand{\refname}{}
 
-\subsection*{\rm References}
+\subsection{\rm References}
 
 \vskip-20pt
 
