--- a/howard-1980/howard.tex
+++ b/howard-1980/howard.tex
@@ -24,7 +24,7 @@
 \sloppy
 \raggedbottom
 \pagestyle{plain}
-%\usepackage[euler-digits]{eulervm}
+\usepackage[euler-digits]{eulervm}
 \usepackage{enumitem}
 \usepackage{mathpartir}
 \usepackage{stmaryrd}
@@ -268,7 +268,7 @@ $B_2(B_1 FG) \contr F $ and $B_3(B_1 FG) \contr G$.
 Then we get the following theorem.
 
 \begin{theorem}
-Theorem 3 Every closed irreducible term of type $\a \land \b$ has the form $B_1 F^\a G^\b $ where $B_1$ is as above.
+Every closed irreducible term of type $\a \land \b$ has the form $B_1 F^\a G^\b $ where $B_1$ is as above.
 \end{theorem}
 [{\it Note added 1979}. This treatment of $\lnot$ and $\land$ does not seem to be appropriate for cut elimination in Gentzen's sequent calculus. 
 As P. Martin-Löf soon pointed out to me, it is appropriate for D. Prawitz's theory of Gentzen's system of natural deduction.
