--- a/yoneda-speedrun/yoneda-speedrun-lucida.tex
+++ b/yoneda-speedrun/yoneda-speedrun-lucida.tex
@@ -71,7 +71,7 @@ menucolor=blue,linktocpage=true]{hyperref}
 \usepackage{url}
 \urlstyle{same}
 
-\newcommand{\h}{H}                      % Homs (e.g. \h_A means Hom(-, A))
+\newcommand{\h}{\textit{H}}                      % Homs (e.g. \h_A means Hom(-, A))
 \newcommand{\op}{\mathrm{op}}           % Opposite category
 \newcommand{\true}{\texttt{true}}       % Truth value "true"    
 \newcommand{\false}{\texttt{false}}   
@@ -455,7 +455,7 @@ Check over this formula in your head, and note that there are {\it two} function
 applications (one for the functor, and one inside that for the post-composition arrow),
 and two different kinds of placeholders.
 
-Other notations for this functor include $\Hom(X, -)$, $\Hom_\CC(X, -)$, $H^X$, $h^X$, and
+Other notations for this functor include $\Hom(X, -)$, $\Hom_\CC(X, -)$, $\h^X$, ${\it h}^X$, and
 just plain $\CC(X,-)$. In my notation we should have written this as $\Arrows_{\CC}(X,
 -)$, but I'm lazy. This kind of functor is also called a {\it hom-functor}.
 
@@ -732,7 +732,7 @@ $\DD^\CC$.\\
 $\Nat(F, G)$ & The collection of natural transformations from $F$ to $G$. Also written
 $[\CC,\DD](F,G)$, or~$\mathop{\mathit {Nat}}(F,G)$ or just~$\Hom(F,G)$. \\
 $\Arrows(X, -)$ & The represented or ``arrow'' functor for $X$. Also called the ``hom''
-functor and written $\CC(X,-)$, $H^X$, $\mathop{\mathit{hom}}$, or $\Hom(X,-)$. \\
+functor and written $\CC(X,-)$, $\h^X$, $\mathop{\mathit{hom}}$, or $\Hom(X,-)$. \\
 $f \circ - $, $- \circ f$ & Pre- and post-composition maps. Also written $f_*$ and
 $f^*$.\\
 $\Yo$ & Yoneda Embedding.\\
