--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -729,7 +729,7 @@ $\DD^\CC$.\\
 $\Nat(F, G)$ & The collection of natural transformations from $F$ to $G$. Also written
 $[\CC,\DD](F,G)$, or~$\mathop{\mathit {Nat}}(F,G)$ or just~$\Hom(F,G)$. \\
 $\Arrows(X, -)$ & The represented or ``arrow'' functor for $X$. Also called the ``hom''
-functor and written $\CC(X,-)$, $\h^X$, $\mathop{\mathit{hom}}$, or $\Hom(X,-)$. \\
+functor and written $\CC(X,-)$, $\h^X$, $\mathop{\mathit{hom}_X}$, or $\Hom(X,-)$. \\
 $f \circ - $, $- \circ f$ & Pre- and post-composition maps. Also written $f_*$ and
 $f^*$.\\
 $\Yo$ & Yoneda Embedding.\\
