--- a/yoneda-speedrun/yoneda-speedrun-lucida.tex
+++ b/yoneda-speedrun/yoneda-speedrun-lucida.tex
@@ -741,11 +741,14 @@ $\Yo$ & Yoneda Embedding.\\
 \normalsize
 
 \begin{thebibliography}{100}
-
+\parskip 0pt
 \small
 \bibitem{carroll} Sean Carroll,
 \href{https://preposterousuniverse.com/wp-content/uploads/2015/08/grtinypdf.pdf}{\it A
 No-Nonsense Introduction to General Relativity},  2001.
+
+\bibitem{Cheng} Eugenia Cheng, \href{https://www.cambridge.org/core/books/joy-of-abstraction/00D9AFD3046A406CB85D1AFF5450E657}
+{\it The Joy Of Abstraction}, 2022.
 
 \bibitem{Goedecke} Julia Goedecke,
 \href{http://www.julia-goedecke.de/pdf/CategoryTheoryNotes.pdf}{\it Category Theory
