--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -1652,8 +1652,7 @@ pp. 660-696.
 
 \bibitem[12]{11} Scott, D.S., (1980). {\it Lambda calculus: Some models, some philosophy},
 In The Kleene Symposium, (Eds. J. Barwise, H.J. Keisler, and K. Kunen), North-Holland,
-Amsterdam, pp. 381-421. Szabo, M.E., (1978). "Algebra of proofs", North-Holland,
-Amsterdam.
+Amsterdam, pp. 381-421. 
 
 \bibitem[13]{12} Szabo, M.E., (1978). {\it Algebra of proofs}, North-Holland, Amsterdam.
 
