--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -7,7 +7,7 @@
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
-\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.05}
 %\sloppy
 \raggedbottom
