--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -384,7 +384,7 @@ The notation is now wholly categorical (and mostly unreadable). Category theoris
 whole thing (that is, the definition of a \ccc, which is what we have just given) into the
 language of functors, which has a lot of sense. But if you have never seen any abstract
 category theory before, it is really rather too abstract. The idea of a \ccc\ as a system
-of types is, I think, reasonably simple. Each \ccc\ represents a theory of functions. The
+of types is, I think, reasonably simple. {\it Each \ccc\ represents a theory of functions}. The
 maps in the category are certain special functions that are used to express the relations
 between the types (the domains of the category). In order to be able to deal with multiary
 functions, we assume we can form (and analyze) products. In order to be able to work with
