--- a/2303.09521/Ramsey_arXiv.tex
+++ b/2303.09521/Ramsey_arXiv.tex
@@ -1,14 +1,38 @@
 \documentclass[12pt,reqno]{amsart}
-\usepackage{amsmath,amssymb,amsthm,bbm,mathtools,calc,verbatim,enumitem,tikz,url,mathrsfs,cite,fullpage,hyperref}
-\usepackage{float}
+\usepackage{amsmath,amssymb,amsthm,bbm,mathtools,calc,verbatim,enumitem,tikz,url,mathrsfs,cite,fullpage}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}\usepackage{float}
 \usepackage{subcaption}
 %\usepackage{setspace}
-\renewcommand{\baselinestretch}{1.14}
-\addtolength{\footskip}{\baselineskip/2}
 
 %\usepackage{showlabels}
 \usepackage{comment}
 
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
 %\parskip=12pt plus 1pt
 
 \newcommand\marginal[1]{\marginpar{\raggedright\parindent=0pt\tiny #1}}
