--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -1,30 +1,3 @@
-\documentclass[12pt]{article}
-
-\usepackage{amsthm}
-
-\usepackage[small]{titlesec}
-\usepackage{cite}
-\usepackage{tabularx}
-
-%\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[colorlinks=true,
-breaklinks=true,
-urlcolor=blue,
-anchorcolor=blue,
-citecolor=blue,
-filecolor=blue,
-linkcolor=blue,
-menucolor=blue,linktocpage=true]{hyperref}
-\hypersetup{bookmarksopen=true, bookmarksnumbered=true, bookmarksopenlevel=10}
-\linespread{1.05}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
-\sloppy
-\raggedbottom
-\pagestyle{plain}
-\usepackage{tikz}
-\usepackage{tikz-cd}
-
-
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
@@ -65,7 +38,7 @@ menucolor=blue,linktocpage=true]{hyperref}
 \usepackage{url}
 \urlstyle{same}
 
-\newcommand{\h}{{\it H}}                      % Homs (e.g. \h_A means Hom(-, A))
+\newcommand{\h}{\textit{H}}                      % Homs (e.g. \h_A means Hom(-, A))
 \newcommand{\op}{\mathrm{op}}           % Opposite category
 \newcommand{\true}{\texttt{true}}       % Truth value "true"    
 \newcommand{\false}{\texttt{false}}   
@@ -121,9 +94,9 @@ menucolor=blue,linktocpage=true]{hyperref}
 
 \begin{document}
 
-\title{A Yoneda Speedrun}
+\title{\Large A Yoneda Speedrun}
 \author{\large Pete Su}
-\date{\normalsize 2021-10-30 \\ {\footnotesize (Updated 2023-01-09)}}
+\date{\normalsize 2021-10-30 \\ {\footnotesize (Updated 2023-03-18)}}
 
 \maketitle
 
@@ -450,7 +423,7 @@ Check over this formula in your head, and note that there are {\it two} function
 applications (one for the functor, and one inside that for the post-composition arrow),
 and two different kinds of placeholders.
 
-Other notations for this functor include $\Hom(X, -)$, $\Hom_\CC(X, -)$, $\h^{X}$, ${\it h}^X$, and
+Other notations for this functor include $\Hom(X, -)$, $\Hom_\CC(X, -)$, $\h^X$, ${\it h}^X$, and
 just plain $\CC(X,-)$. In my notation we should have written this as $\Arrows_{\CC}(X,
 -)$, but I'm lazy. This kind of functor is also called a {\it hom-functor}.
 
@@ -777,5 +750,3 @@ Theory in Context}, Dover, 2016.
 Category Theory: A Gentle Introduction}, 2019.
 
 \end{thebibliography}
-
-\end{document}
