--- a/2303.02785/TWF_101-150_arxiv_1.tex
+++ b/2303.02785/TWF_101-150_arxiv_1.tex
@@ -3,26 +3,29 @@
 % 1st arXiv version
 % 2023-03-05
 
-\documentclass{article}
+\documentclass[12pt]{article}
 
 \usepackage{longtable}
 \usepackage{booktabs}
 \def\tightlist{}
 
-\usepackage{charter}
-\usepackage{fancyhdr}
-\pagestyle{fancy}
+%\usepackage{amssymb}
+\usepackage[full]{textcomp}
+\usepackage[]{XCharter}% lining figures in math, osf in text
+\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
+\usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
+\usepackage[cal=cm,scr=esstix]{mathalpha}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=.6in, bottom=1in]{geometry}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+%\usepackage[small]{titlesec}
 
-\usepackage[margin=1.6in]{geometry}
+\input{../helpers/fix-underbrace.tex}
+%\input{../helpers/psu-sc-headers.tex}
 
-\usepackage{amsmath,amssymb}
-\usepackage[colorlinks=true]{hyperref}
-\usepackage{xcolor}
-\definecolor{myurlcolor}{rgb}{0.6,0,0}
-\definecolor{mycitecolor}{rgb}{0,0,0.8}
-\definecolor{myrefcolor}{rgb}{0,0,0.8}
-\hypersetup{linkcolor=myrefcolor,citecolor=mycitecolor,urlcolor=myurlcolor}
-
+\usepackage{cite}
+\sloppy
+\raggedbottom
 \renewcommand{\texttt}[1]{%
   \begingroup
   \ttfamily
@@ -67,6 +70,20 @@
 
 
 \usepackage[main]{embedall}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 
 \begin{document}
 
