--- a/0903.0340/rosetta.arxiv.3.tex
+++ b/0903.0340/rosetta.arxiv.3.tex
@@ -7,19 +7,7 @@
 \documentclass[12pt]{article}
 \raggedbottom
 
-\usepackage[dvips,colorlinks=true
-,urlcolor=blue
-,anchorcolor=blue
-,citecolor=blue
-,filecolor=blue
-,linkcolor=blue
-,menucolor=blue
-,linktocpage=true]{hyperref}
-\hypersetup{
-bookmarksopen=true,
-bookmarksnumbered=true,
-bookmarksopenlevel=10
-}
+
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[full]{textcomp}
@@ -28,7 +16,7 @@ bookmarksopenlevel=10
 \usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
 \usepackage[cal=cm]{mathalpha}
 \linespread{1.05}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=.6in, bottom=1in]{geometry}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 %\usepackage[papersize={7.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 \tolerance=2000
@@ -52,6 +40,20 @@ bookmarksopenlevel=10
 % PsTricks defaults
 \psset{linewidth=0.3pt,dimen=middle}
 \psset{xunit=.70cm,yunit=0.70cm}
+
+\usepackage[dvips,colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 
 % theorem environments
 \newtheorem{thm}{Theorem}
