--- a/2303.10798/ctpre.sty
+++ b/2303.10798/ctpre.sty
@@ -2,7 +2,7 @@
 % Modified to remove journal name etc. for preprint use.
 
 % PACKAGES
-\usepackage[a4paper,twoside]{geometry}
+%\usepackage[a4paper,twoside]{geometry}
 \usepackage{amssymb,amsmath,amsthm,amsfonts}
 \usepackage{graphicx}
 \usepackage{tgtermes}
@@ -12,6 +12,7 @@
 \usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
 \usepackage[colorlinks=true,citecolor=blue,linkcolor=blue,urlcolor=black]{hyperref}
 \usepackage[noabbrev,capitalise]{cleveref}
+% these include amsmath and that can cause trouble in older docs.
 
 % GEOMETRY
 \setlength{\textwidth}{6.3in}
@@ -122,18 +123,6 @@ Preprint: March 2023%
 % ----------------------------
 
 % HEADERS
-\renewcommand{\ps@plain}{%
-	\ps@headings
-	% headers
-	\renewcommand{\@evenhead}{{\headsc \thepage} \hfil \smAuthfont \authorshead}
-	\renewcommand{\@oddhead}{
-		\headsc preprint \hfil \ifnum\value{page}>1{\thepage}
-		\else\relax\fi
-	}
-	% footers
-	\renewcommand{\@evenfoot}{}
-	\renewcommand{\@oddfoot}{}
-}
 \pagestyle{plain}
 
 % THEOREMS
