--- a/2303.10798/einstein.tex
+++ b/2303.10798/einstein.tex
@@ -17,6 +17,19 @@
 \documentclass[12pt]{article}
 \usepackage{ctpre}
 
+\usepackage{newtxmath}
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+
 % GEOMETRY AND SPACES
 % To keep the style homogeneous among all CT papers, please
 %   * remove all commands that change parameters such as margins or page sizes. 
