--- a/2303.10798/einstein.tex
+++ b/2303.10798/einstein.tex
@@ -19,7 +19,7 @@
 
 \usepackage{newtxmath}
 \usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
-\linespread{1.05}
+%\linespread{1.05}
 \sloppy
 \raggedbottom
 \input{../helpers/cmrsum}
