--- a/0804.3434/lambdanotes.tex
+++ b/0804.3434/lambdanotes.tex
@@ -1,16 +1,33 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 \input{lambdanotes.sty}
 
-\oddsidemargin 1in \topmargin 1in 
-\textwidth 4.5in \textheight 6.5in
-
 \title{Lecture Notes on the Lambda Calculus}
-\author{Peter Selinger}
-\date{Department of Mathematics and Statistics\\
+\author{Peter Selinger\\
+Department of Mathematics and Statistics\\
   Dalhousie University, Halifax, Canada}
+\date{}
 
 \usepackage[all]{xy}
 \SelectTips{cm}{}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
 
 % ----------------------------------------------------------------------
 \begin{document}
@@ -26,6 +43,8 @@
   polymorphism, type inference, denotational semantics, complete
   partial orders, and the language PCF.
 \end{abstract}
+
+\newpage
 
 \tableofcontents
 
