--- a/1102.1313/LNPpreamble.tex
+++ b/1102.1313/LNPpreamble.tex
@@ -121,7 +121,7 @@
 
 \newcommand{\lrarr}{\longrightarrow}
 \newcommand{\llarr}{\longleftarrow}
-\newcommand{\rarr}{\rightarrow}
+\newcommand{\rarr}{\longrightarrow}
 \newcommand{\uscore}{\_\!\_}
 
 \newcommand{\CC}{\mathcal{C}}
